# FaSi_VIZ

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  GITHUB_ANLEITUNG.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-min.txt
.claude/: settings.json
.github/workflows/: ci.yml
SafetyCockpit/: .Rbuildignore  .dockerignore  .gitignore  .rscignore  DESCRIPTION  FaSi_VIZ_Farbstandard.md  LICENSE  NAMESPACE  app.R  azure-pipelines.yml  generate_farbbericht.py  safetycockpit.dockerfile
SafetyCockpit/Dockerfiles/: alpine-rshiny.dockerfile
SafetyCockpit/R/: alter_mod.R  altervs_mod.R  ampel.R  anomal_data.R  anomal_mod.R  bars_data.R  bars_mod.R  bars_plot.R  bsm_mod.R  cumul_data.R  cumul_mod.R  cumul_plot.R  data_docs.R  data_prep.R  data_prep_new.R  faz_mod.R  faz_plot.R  fazfilter_mod.R  filter_mod.R  gauge_mod.R  gauge_plots.R  get_sql_data.R  haupt_mod.R  haupt_plot.R  history_mod.R  kapobericht_mod.R  lagebericht_mod.R  lagebericht_utils.R  map_mod.R  mapdensity_data.R  mapdensity_mod.R  ml_data.R  ml_mod.R  monat_mod.R  monat_plot.R  report_mod.R  safety_cockpit.R  schwere_mod.R  schwere_plot.R  schwerefilter_mod.R  (+16 more)
SafetyCockpit/compose/: docker-compose.azure.yml  docker-compose.yml
SafetyCockpit/data/: Akzentfarben.rda  AkzentfarbenDarkmode.rda  AkzentfarbenSoft.rda  Funktion.rda  Grautoene.rda  Infografiken.rda  canton_zh_no_lakes.rda  ktz_palette.rda  old_df.rda  t12.rda
SafetyCockpit/man/: Farben.Rd  SafetyCockpit-package.Rd  SafetyCockpit.Rd  canton_zh_no_lakes.Rd  lighting_condition.Rd  old_df.Rd  sunriset.Rd  sunriset_df.Rd  t12.Rd
SafetyCockpit/www/: custom.css
docs/: GLOSSAR.md  README.md  STRUKTUR.md
examples/: einfuehrung.ipynb  fasi_design_showcase.html  python_plotly_example.py
src/fasi_zh_viz/: __init__.py  altair_theme.py  annotations.py  contrast.py  fasi_themes.py  impressum.py  matplotlib_style.py  plotly_theme.py  sprache.py  (+3 more)
tests/: test_fasi_zh_viz.py
(+12 files in other folders)
