[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fasi-zh-viz"
version = "2.6.2"
description = "Visualisierungs-Library gemäss Kanton Zürich Designsystem"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Fachstelle Verkehrssicherheit FaSi", email = "fasi@bd.zh.ch"},
]
keywords = [
    "visualization",
    "kanton-zuerich",
    "design-system",
    "infographics",
    "wcag",
    "accessibility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: German",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = []

[project.optional-dependencies]
matplotlib = ["matplotlib>=3.5"]
plotly = ["plotly>=5.0"]
altair = ["altair>=5.0"]
all = [
    "matplotlib>=3.5",
    "plotly>=5.0",
    "altair>=5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/FaSiMaster/FaSi_VIZ"
Documentation = "https://github.com/FaSiMaster/FaSi_VIZ#readme"
Repository = "https://github.com/FaSiMaster/FaSi_VIZ.git"
Issues = "https://github.com/FaSiMaster/FaSi_VIZ/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/fasi_zh_viz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
